--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -1,11 +1,8 @@
 enabled_bitflyer_connection:
   publisher: bitflyer_pub
   recipient_id: 'bitflyer_pub_connectionABC'
-  <% salt = SecureRandom.random_bytes(12) %>
-  encrypted_access_token:  "<%= TotpRegistration.attr_encrypted_encrypt('secret',  'access_token', key: BitflyerConnection.encryption_key, iv: salt ) %>"
-  encrypted_access_token_iv: "<%= Base64.encode64(salt) %>"
-  encrypted_refresh_token:  "<%= TotpRegistration.attr_encrypted_encrypt('secret',  'access_token', key: BitflyerConnection.encryption_key, iv: salt ) %>"
-  encrypted_refresh_token_iv: "<%= Base64.encode64(salt) %>"
+  access_token:  '<%= BitflyerConnection.attribute_types["access_token"].serialize('access_token') %>'
+  refresh_token:  '<%= BitflyerConnection.attribute_types["refresh_token"].serialize('refresh_token') %>'
   display_name: 123
   access_expiration_time: "<%= 2.days.ago %>"
 
