Create crypto controllers and crypto dropdowns on the channel page

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ docker-compose.override.yml
 coverage
 
 # Ignore compiled TypeScript files
-/app/javascript/views/**/*.jsx
+# /app/javascript/views/**/*.jsx
 
 # Ignore package-lock.json in favor of yarn.lock
 package-lock.json
