--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -155,6 +155,11 @@ uphold_connected_twitter_<%= item %>:
   verified: true
 <%end%>
 
+alice_default_twitter:
+  publisher: default
+  details: uphold_connected_twitter_default (TwitterChannelDetails)
+  verified: true
+
 youtube_initial:
   publisher: youtube_initial
   details: youtube_initial_details (YoutubeChannelDetails)
