--- a/test/fixtures/twitter_channel_details.yml
+++ b/test/fixtures/twitter_channel_details.yml
@@ -25,3 +25,17 @@ uphold_connected_twitter_<%=item%>:
   created_at: <%= Time.now - 2.weeks %>
   updated_at: <%= Time.now - 2.weeks %>
 <%end%>
+
+
+uphold_connected_twitter_default:
+  twitter_channel_id: "default"
+  auth_provider: "register_twitter_channel"
+  name: "Uphold Connected Twitter"
+  screen_name: "uphold_connected_default"
+  thumbnail_url: "https://some_image_host.com/some_image2.png"
+  stats:
+    :verified: false
+    :followers_count: 90000
+    :status_count: 330
+  created_at: <%= Time.now - 2.weeks %>
+  updated_at: <%= Time.now - 2.weeks %>
