--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -7,7 +7,7 @@ base_verified_connection: &base_verified_connection
   status: "ok"
   country: "US"
   send_emails: 2019-01-01
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ "scope": "cards:write" }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ "scope": "cards:write" }.to_json) %>'
 
 unconnected:
   created_at: 2019-01-01
@@ -33,7 +33,7 @@ youtube_initial_connection:
   publisher: youtube_initial
   country: 'US'
   uphold_verified: true
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({}) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({}.to_json) %>'
   send_emails: 2019-01-01
 
 verified_connection:
@@ -108,7 +108,7 @@ google_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '222', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '222', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json) %>'
 
 basic_connection:
   uphold_verified: true
@@ -118,7 +118,7 @@ basic_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '333' }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '333' }.to_json) %>'
 
 
 details_connection:
@@ -129,7 +129,7 @@ details_connection:
 blocked_connection:
   status: blocked
   publisher: uphold_connected_blocked
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '111', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '111', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json) %>'
 
 restricted_member:
   uphold_verified: true
@@ -139,11 +139,11 @@ restricted_member:
   status: "restricted"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
   send_emails: 2019-01-01
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '444' }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '444' }.to_json) %>'
 
 verified_no_currency:
   uphold_verified: true
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '555' }) %>'
+  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '555' }.to_json) %>'
   uphold_state_token:
   publisher: uphold_connected_currency_unconfirmed
   address: "abcdabcd-0000-0000-0000-abcd00000007"
