--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Yarn install
         run: yarn --frozen-lockfile
       - name: Prepare database
-        run: USE_MINITEST_RETRY=1 RAILS_ENV=test bundle exec rails db:prepare
+        run: (unset CI; USE_MINITEST_RETRY=1 RAILS_ENV=test bundle exec rails db:prepare)
         env:
           DATABASE_URL_TEST: postgres://postgres:postgres@localhost:5432/brave_publishers_test
       - name: Run tests
