--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -13,6 +13,9 @@
 default: &default
   creators_host: <%= ENV["CREATORS_HOST"] %>
   admin_ip_whitelist: <%= ENV["ADMIN_IP_WHITELIST"] %>
+  active_record_encryption_primary_key:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_PRIMARY_KEY"] %>
+  active_record_encryption_key_derivation_salt:  <%= ENV["ACTIVE_RECORD_ENCRYPTION_KEY_DERIVATION_SALT"] %>
+  active_record_encryption_deterministic_key: <%= ENV["ACTIVE_RECORD_ENCRYPTION_DETERMINISTIC_KEY"] %>
   # (Optional) Token required to use this app's API.
   api_auth_token: <%= ENV["API_AUTH_TOKEN"] %>
   # (Optional) Comma separated list of IPs or CIDR strings e.g. ::1,127.0.0.1/16,1.2.3.4/32
@@ -202,6 +205,11 @@ test:
   # gemini
   gemini_client_id: test_client_id
   gemini_client_secret: test_client_secret
+
+  # these were generated just for test, not used elsewhere
+  active_record_encryption_primary_key:  C8ovyLSdJETQnmiVU6M5zvzTFoFK5kZu
+  active_record_encryption_key_derivation_salt:  6jTIgGZnbp8bqrlN1VMG1HRe0GAVSX4i
+  active_record_encryption_deterministic_key: s4BHU98gkDJPD12v3rCPVWVSbfOuFj0c
 
   # Social media links
   bat_medium_url: "https://medium.com/@attentiontoken"
