adding necessary environment variables to run rails 7 locally"

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -36,6 +36,7 @@ RUN bundle install --jobs 20
 
 ENV NVM_DIR /usr/local/nvm
 ENV NODE_VERSION 18.15.0
+NODE_OPTIONS=--openssl-legacy-provider
 ENV NODE_PATH $NVM_DIR/versions/node/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
