--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -175,6 +175,10 @@ development:
   max_site_age: 6
   should_send_notifications: true
   slack_webhook_url: <%= ENV["SLACK_WEBHOOK_URL"] %>
+  # these were generated just for dev, not used elsewhere
+  active_record_encryption_primary_key:  C8ovyLSdJETQnmiVU6M5zvzTFoFK5kZu
+  active_record_encryption_key_derivation_salt:  6jTIgGZnbp8bqrlN1VMG1HRe0GAVSX4i
+  active_record_encryption_deterministic_key: s4BHU98gkDJPD12v3rCPVWVSbfOuFj0c
 
 test:
   <<: *default
