--- a/test/fixtures/user_authentication_tokens.yml
+++ b/test/fixtures/user_authentication_tokens.yml
@@ -1,6 +1,8 @@
 default_user_authentication_token: &default_user_authentication_token
   authentication_token_expires_at: "<%= DateTime.now + PublisherTokenGenerator::TOKEN_TTL %>"
-  authentication_token: '<%= UserAuthenticationToken.attribute_types["authentication_token"].serialize("authentication_token") %>'
+  # authenticity_token run through console with
+  # UserAuthenticationToken.attribute_types["authentication_token"].serialize("authentication_token")
+  authentication_token: "{\"p\":\"0td0A3BTMy9uWB70qMpg2gDcW8A=\",\"h\":{\"iv\":\"+Y/xIQHuaf5RB3ZZ\",\"at\":\"7Na/C3xVwKZVxB+1s9eltw==\"}}"
   user: default
 
 completed_user_authentication_token:
