--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -17,8 +17,8 @@ connection_with_token:
   publisher: gemini_completed
   is_verified: true
   recipient_id: <%= SecureRandom.uuid %>
-  access_token:  '<%= GeminiConnection.attribute_types["access_token"].serialize('access_token') %>'
-  refresh_token:  '<%= GeminiConnection.attribute_types["refresh_token"].serialize('refresh_token') %>'
+  access_token:  "{\"p\":\"jAbpCZWg+WEt+Pd2\",\"h\":{\"iv\":\"ge8wrBvKjf37XCuL\",\"at\":\"khms5mVUubgSt1Kn3pqk7g==\"}}"
+  refresh_token: "{\"p\":\"NGzY2xXThfjkicba/A==\",\"h\":{\"iv\":\"f3ZKcZla2PcQ9INT\",\"at\":\"wEYWCO8FQpO1JLQCdwHB7g==\"}}"
   country: 'BE'
   status: 'Active'
 
