--- a/test/fixtures/totp_registrations.yml
+++ b/test/fixtures/totp_registrations.yml
@@ -1,14 +1,14 @@
 default:
   publisher: verified
   last_logged_in_at: <%= 2.days.ago %>
-  secret: '<%= TotpRegistration.attribute_types["secret"].serialize("secret") %>'
+  secret: "{\"p\":\"wGaRMQ3Q\",\"h\":{\"iv\":\"uJJLsghya2K1vGDG\",\"at\":\"JKGd7ZFGmlugdpxztPM4ew==\"}}"
 
 verified_totp:
   publisher: verified_totp_only
   last_logged_in_at: <%= 2.days.ago %>
-  secret: '<%= TotpRegistration.attribute_types["secret"].serialize("secret") %>'
+  secret: "{\"p\":\"wGaRMQ3Q\",\"h\":{\"iv\":\"uJJLsghya2K1vGDG\",\"at\":\"JKGd7ZFGmlugdpxztPM4ew==\"}}"
 
 admin:
   publisher: admin
   last_logged_in_at: <%= 2.days.ago %>
-  secret: '<%= TotpRegistration.attribute_types["secret"].serialize("secret") %>'
+  secret: "{\"p\":\"wGaRMQ3Q\",\"h\":{\"iv\":\"uJJLsghya2K1vGDG\",\"at\":\"JKGd7ZFGmlugdpxztPM4ew==\"}}"
