--- a/test/fixtures/uphold_connections.yml
+++ b/test/fixtures/uphold_connections.yml
@@ -1,3 +1,5 @@
+<% salt = SecureRandom.random_bytes(12) %>
+
 base_verified_connection: &base_verified_connection
   uphold_verified: true
   default_currency: BAT
@@ -7,7 +9,8 @@ base_verified_connection: &base_verified_connection
   status: "ok"
   country: "US"
   send_emails: 2019-01-01
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ "scope": "cards:write" }.to_json) %>'
+  encrypted_uphold_access_parameters: "<%= TotpRegistration.attr_encrypted_encrypt('secret',  { scope: 'cards:write' }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
 
 unconnected:
   created_at: 2019-01-01
@@ -33,7 +36,8 @@ youtube_initial_connection:
   publisher: youtube_initial
   country: 'US'
   uphold_verified: true
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({}.to_json) %>'
+  encrypted_uphold_access_parameters: "<%= TotpRegistration.attr_encrypted_encrypt('secret', '{}', key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
   send_emails: 2019-01-01
 
 verified_connection:
@@ -108,7 +112,8 @@ google_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '222', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json) %>'
+  encrypted_uphold_access_parameters:  "<%= TotpRegistration.attr_encrypted_encrypt('secret',  { scope: 'cards:write', access_token: '222', refresh_token: '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
 
 basic_connection:
   uphold_verified: true
@@ -118,8 +123,8 @@ basic_connection:
   address: "abcdabcd-0000-0000-0000-abcd00000006"
   status: "ok"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '333' }.to_json) %>'
-
+  encrypted_uphold_access_parameters:  "<%= TotpRegistration.attr_encrypted_encrypt('secret',  { scope: 'cards:write', access_token: '333' }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
 
 details_connection:
   <<: *base_verified_connection
@@ -129,7 +134,8 @@ details_connection:
 blocked_connection:
   status: blocked
   publisher: uphold_connected_blocked
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '111', 'refresh_token': '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json) %>'
+  encrypted_uphold_access_parameters:  "<%= TotpRegistration.attr_encrypted_encrypt('secret',  { scope: 'cards:write', access_token: '111', refresh_token: '123', 'expires_in': 3599, 'expiration_time': 3599.seconds.from_now.to_s }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
 
 restricted_member:
   uphold_verified: true
@@ -139,11 +145,13 @@ restricted_member:
   status: "restricted"
   uphold_id: 7946e100-8abf-4361-b50b-240bbe5511dc
   send_emails: 2019-01-01
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '444' }.to_json) %>'
+  encrypted_uphold_access_parameters:  "<%= TotpRegistration.attr_encrypted_encrypt('secret', { scope: 'cards:write', access_token: '444' }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
 
 verified_no_currency:
   uphold_verified: true
-  uphold_access_parameters: '<%= UpholdConnection.attribute_types["uphold_access_parameters"].serialize({ 'scope': 'cards:write', 'access_token': '555' }.to_json) %>'
+  encrypted_uphold_access_parameters:  "<%= TotpRegistration.attr_encrypted_encrypt('secret', { scope: 'cards:write', access_token: '555' }.to_json, key: Rails.application.secrets[:attr_encrypted_key].byteslice(0, 32), iv: salt ) %>"
+  encrypted_uphold_access_parameters_iv: "<%= Base64.encode64(salt) %>"
   uphold_state_token:
   publisher: uphold_connected_currency_unconfirmed
   address: "abcdabcd-0000-0000-0000-abcd00000007"
