--- a/test/fixtures/channels.yml
+++ b/test/fixtures/channels.yml
@@ -12,6 +12,7 @@ verified:
   publisher: verified
   details: verified_details (SiteChannelDetails)
   verified: true
+  public_identifier: '123456dfg6'
 
 verified_blocked_country:
   publisher: verified_blocked_country
