--- a/.env.docker.dev
+++ b/.env.docker.dev
@@ -50,3 +50,5 @@ GITHUB_CLIENT_SECRET=""
 # For RECAPCHA  - https://github.com/ambethia/recaptcha#rails-installation
 RECAPTCHA_SITE_KEY=""
 RECAPTCHA_SECRET_KEY=""
+
+RAILS_LOG_TO_STDOUT=true
