copy from chore/update-ratios-endpoint

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -147,7 +147,8 @@ default: &default
 development:
   <<: *default
   active_promo_id: "free-bats-2018q1"
-  bat_ratios_url: "https://bat-ratios-dev.herokuapp.com"
+  bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
+  bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
   base_referral_url: "brave.com"
   internal_email: brave-publishers@localhost.local
   support_email: brave-publishers@localhost.local
@@ -233,6 +234,9 @@ test:
   sendgrid_marketing_list_id: 10300648
   sendgrid_publishers_list_id: 3986776
   slack_webhook_url: false
+  # Ratios, also needed for VCR tests
+  # bat_ratios_token: <%= ENV["BAT_RATIOS_TOKEN"] %>
+  # bat_ratios_url: <%= ENV["BAT_RATIOS_URL"] %>
   # Bitflyer env variables
   bitflyer_host: "https://localhost/bitflyertest"
   bitflyer_client_id: "client_id_abc123"
