Install latest firefox-esr on github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,14 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.0.2
+      - name: Setup firefox
+        id: setup-firefox
+        uses: browser-actions/setup-firefox@v1
+        with:
+          firefox-version: latest-esr
+        run: |
+            echo Installed firefox versions: ${{ steps.setup-firefox.outputs.firefox-version }}
+            firefox --version
       - name: Bundle install
         run: |
           bundle config path vendor/bundle
