--- a/package.json
+++ b/package.json
@@ -129,7 +129,6 @@
     "nth-check": "2.0.1",
     "ansi-regex": "5.0.1",
     "json5": "2.2.2",
-    "minimatch": "3.0.5",
-    "request": "2.88.2"
+    "minimatch": "3.0.5"
   }
 }
