--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "hoek": "^6.0.1",
     "husky": "^7.0.2",
     "jest-styled-components": "^7.0.2",
-    "node-sass": "^7.0.3",
+    "node-sass": "^8.0.0",
     "prettier": "1.16.3",
     "stylelint": "^13.3.0",
     "stylelint-config-recommended-scss": "^4.2.0",
@@ -129,7 +129,6 @@
     "nth-check": "2.0.1",
     "ansi-regex": "5.0.1",
     "json5": "2.2.2",
-    "minimatch": "3.0.5",
-    "request": "2.88.2"
+    "minimatch": "3.0.5"
   }
 }
