--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -13,3 +13,7 @@ top_referrer_bitflyer_connected:
   publisher: top_referrer_bitflyer
   payout_failed: true
   display_name: 'display_name'
+
+bitflyer_two_connected:
+  publisher: bitflyer_two
+  display_name: 'display_name'
