Bitflyer translation for failed wallet (#4062)
* Add Bitflyer & Gemini payout failed tests

* Bitflyer failed connection test & gemini fix

* Escaping

--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -11,3 +11,9 @@ suspended_bitflyer_connection:
 
 top_referrer_bitflyer_connected:
   publisher: top_referrer_bitflyer
+  payout_failed: true
+  display_name: 'display_name'
+
+bitflyer_two_connected:
+  publisher: bitflyer_two
+  display_name: 'display_name'
