--- a/package.json
+++ b/package.json
@@ -55,17 +55,27 @@
     "preset": "ts-jest/presets/js-with-babel"
   },
   "dependencies": {
+    "@babel/core": "7",
+    "@babel/plugin-transform-runtime": "7",
+    "@babel/preset-env": "7",
+    "@babel/preset-typescript": "^7.21.5",
+    "@babel/runtime": "7",
     "@github/webauthn-json": "^0.6.6",
     "@rails/activestorage": "^7.0.4-2",
     "@rails/ujs": "^7.0.4-2",
     "axios": "^0.21.2",
+    "babel-loader": "8",
     "brave-ui": "^0.38.0",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
+    "compression-webpack-plugin": "9",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "dompurify": "^2.3.3",
     "is-accessor-descriptor": "3.0.1",
     "js-yaml": "3.13.1",
     "kind-of": "^6.0.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "moment": "^2.29.4",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
@@ -74,13 +84,21 @@
     "react-intl": "^3.3.2",
     "react-select": "^3.0.8",
     "react-tooltip": "^4.2.3",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
+    "shakapacker": "6.6.0",
+    "style-loader": "^3.3.3",
     "styled-components": "5.1.0",
-    "tributejs": "^3.7.1"
+    "terser-webpack-plugin": "5",
+    "tributejs": "^3.7.1",
+    "webpack": "5",
+    "webpack-assets-manifest": "5",
+    "webpack-cli": "4",
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "5"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^5.4.3",
     "@types/jest": "^24.0.6",
@@ -91,7 +109,6 @@
     "audit-ci": "6.6.1",
     "autoprefixer": "^9.4.3",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -102,6 +119,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "hoek": "^6.0.1",
     "husky": "^7.0.2",
     "jest-styled-components": "^7.0.2",
@@ -119,16 +137,13 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^8.0.1",
     "tslint-react": "^3.6.0",
-    "typescript": "^4.3.5",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "~3"
+    "typescript": "^5.1.3"
   },
   "resolutions": {
-    "node-fetch": "2.6.7",
-    "glob-parent": "5.1.2",
-    "nth-check": "2.0.1",
-    "ansi-regex": "5.0.1",
-    "json5": "2.2.2",
-    "minimatch": "3.0.5"
-  }
+    "@types/react": "16.4.7",
+    "@types/styled-components": "5.1.0"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
