add yarn build to workflow

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -59,6 +59,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Yarn install
         run: yarn --frozen-lockfile
+      - name: Yarn build
+        run: yarn build
       - name: Yarn audit
         run: npx audit-ci --config .audit-ci.json && (cd public/creators-landing && npx audit-ci --config ../../.audit-ci.json)
       - name: Bundler Audit
