--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,8 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
       - name: Yarn install
         run: yarn --frozen-lockfile
+      - name: Yarn build
+        run: yarn build
       - name: Prepare database
         run: PREPARING_DATABASE=1 RAILS_ENV=test bundle exec rails db:prepare
         env:
