changes env variable for build step

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -61,6 +61,8 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Yarn build
         run: cd public/creators-landing && yarn install && yarn build 
+        env: 
+          process.env.CI : false
       - name: Yarn audit
         run: npx audit-ci --config .audit-ci.json && (cd public/creators-landing && npx audit-ci --config ../../.audit-ci.json)
       - name: Bundler Audit
