--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,6 +62,8 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Yarn build
         run: cd public/creators-landing && yarn install && yarn build 
+        env: 
+          process.env.CI : false
       - name: Prepare database
         run: PREPARING_DATABASE=1 RAILS_ENV=test bundle exec rails db:prepare
         env:
