--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -59,6 +59,8 @@ jobs:
         run: yarn --frozen-lockfile
       - name: Yarn build
         run: cd public/creators-landing && yarn install && yarn build 
+        env: 
+          process.env.CI : false
       - name: Standard
         run: bundle exec standardrb
       - name: Brakeman
