update brave-ui, copy old rewards banner from old brave-ui

--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "@rails/ujs": "^7.0.4-2",
     "axios": "^0.21.2",
     "babel-loader": "8",
-    "brave-ui": "^0.38.0",
     "bs58": "5.0.0",
+    "brave-ui": "github:brave/brave-ui#e4c049880199ac652b8f69610b8b70d1cd6d906f",
     "chart.js": "^2.7.2",
     "clipboard": "^2.0.1",
     "compression-webpack-plugin": "9",
