--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -39,10 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "overrides": {
-    "optionator" : "0.9.3"
-  },  
   "resolutions": {
-    "nth-check": "2.1.1"
+    "nth-check": "2.1.1",
+    "word-wrap": "aashutoshrathi/word-wrap"
   }
 }
