--- a/public/creators-landing/package.json
+++ b/public/creators-landing/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "resolutions": {
-    "nth-check": "2.1.1"
+    "nth-check": "2.1.1",
+    "word-wrap": "aashutoshrathi/word-wrap"
   }
 }
