--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -51,7 +51,8 @@ RUN apt-get install -y python3
 RUN npm install -g yarn
 RUN yarn cache clean
 RUN yarn install --verbose
-RUN apt-get install chromium --fix-missing -y 
+RUN apt-get install chromium --fix-missing -y
+RUN cd public/creators-landing && yarn install && yarn build
 
 EXPOSE 3000
 CMD ["bundle", "exec", "rails","server","-b","0.0.0.0","-p","3000"]
