--- a/test/fixtures/faq_categories.yml
+++ b/test/fixtures/faq_categories.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 brave_rewards:
-  name: Brave Rewards
+  name: Brave Creators
   rank: 10
 
 verification:
