--- a/test/fixtures/gemini_connections.yml
+++ b/test/fixtures/gemini_connections.yml
@@ -17,8 +17,8 @@ connection_with_token:
   publisher: gemini_completed
   is_verified: true
   recipient_id: <%= SecureRandom.uuid %>
-  access_token:  "{\"p\":\"A0HSi12c290Vt49G\",\"h\":{\"iv\":\"8SE1PADLaF6w6jtC\",\"at\":\"reenmNCUIVS9v1S9vpgq+A==\"}}"
-  refresh_token:  "{\"p\":\"VLGgjToTY/UVHw8xmw==\",\"h\":{\"iv\":\"vEXWd62T+g1mEoHp\",\"at\":\"5Y4beeO3sBmiN0SDftA/Uw==\"}}"
+  access_token:  "{\"p\":\"LnFCHdkg+hTCtajq\",\"h\":{\"iv\":\"bSij/D78+VQ1T06v\",\"at\":\"eSl/fGA7bB9EpY1XjpZLvg==\"}}"
+  refresh_token:  "{\"p\":\"nKVnnT7dnfh6MysCXg==\",\"h\":{\"iv\":\"VTxYzYeIoQQ9gam6\",\"at\":\"jD+1aWJ6I2XIj/hHQRuh0A==\"}}"
   country: 'BE'
   status: 'Active'
 
@@ -26,8 +26,8 @@ connection_not_verified:
   publisher: gemini_not_completed
   is_verified: false
   status: 'Active'
-  access_token:  "{\"p\":\"A0HSi12c290Vt49G\",\"h\":{\"iv\":\"8SE1PADLaF6w6jtC\",\"at\":\"reenmNCUIVS9v1S9vpgq+A==\"}}"
-  refresh_token:  "{\"p\":\"VLGgjToTY/UVHw8xmw==\",\"h\":{\"iv\":\"vEXWd62T+g1mEoHp\",\"at\":\"5Y4beeO3sBmiN0SDftA/Uw==\"}}"
+  access_token:  "{\"p\":\"LnFCHdkg+hTCtajq\",\"h\":{\"iv\":\"bSij/D78+VQ1T06v\",\"at\":\"eSl/fGA7bB9EpY1XjpZLvg==\"}}"
+  refresh_token:  "{\"p\":\"nKVnnT7dnfh6MysCXg==\",\"h\":{\"iv\":\"VTxYzYeIoQQ9gam6\",\"at\":\"jD+1aWJ6I2XIj/hHQRuh0A==\"}}"
 
 top_referrer_gemini_connected:
   publisher: top_referrer_gemini
