--- a/test/fixtures/bitflyer_connections.yml
+++ b/test/fixtures/bitflyer_connections.yml
@@ -3,8 +3,8 @@ enabled_bitflyer_connection:
   recipient_id: 'bitflyer_pub_connectionABC'
   # run through console with
   # BitflyerConnection.attribute_types["access_token"].serialize('access_token')
-  access_token:  "{\"p\":\"0xnOKdDbiCtdeEFk\",\"h\":{\"iv\":\"TJ6Cl65f8nGNzIUL\",\"at\":\"zM37d8U9DlE5aeuZw9gdug==\"}}"
-  refresh_token:  "{\"p\":\"ziymXehmy9TdklEeqg==\",\"h\":{\"iv\":\"EEgxeAEDu02XafPW\",\"at\":\"AkwfcjxEbF752GYDrBiS+g==\"}}"
+  access_token:  "{\"p\":\"LnFCHdkg+hTCtajq\",\"h\":{\"iv\":\"bSij/D78+VQ1T06v\",\"at\":\"eSl/fGA7bB9EpY1XjpZLvg==\"}}"
+  refresh_token:  "{\"p\":\"nKVnnT7dnfh6MysCXg==\",\"h\":{\"iv\":\"VTxYzYeIoQQ9gam6\",\"at\":\"jD+1aWJ6I2XIj/hHQRuh0A==\"}}"
   display_name: 123
   access_expiration_time: "<%= 2.days.ago %>"
 
