--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "typescript": "^5.1.3"
   },
   "resolutions": {
+    "node-fetch": "2.6.7",
     "@types/react": "16.4.7",
     "@types/styled-components": "5.1.0"
   },
