--- a/test/fixtures/twitter_channel_details.yml
+++ b/test/fixtures/twitter_channel_details.yml
@@ -39,3 +39,16 @@ uphold_connected_twitter_default:
     :status_count: 330
   created_at: <%= Time.now - 2.weeks %>
   updated_at: <%= Time.now - 2.weeks %>
+
+uphold_connected_twitter_default_ii:
+  twitter_channel_id: "default_ii"
+  auth_provider: "register_twitter_channel"
+  name: "Uphold Connected Twitter II"
+  screen_name: "uphold_connected_default_ii"
+  thumbnail_url: "https://some_image_host.com/some_image2.png"
+  stats:
+    :verified: false
+    :followers_count: 90000
+    :status_count: 330
+  created_at: <%= Time.now - 2.weeks %>
+  updated_at: <%= Time.now - 2.weeks %>
