--- a/nextjs/.stylelintrc
+++ b/nextjs/.stylelintrc
@@ -1,9 +1,17 @@
 {
   "extends": ["stylelint-config-standard", "stylelint-config-clean-order"],
   "rules": {
-    "selector-class-pattern": [
-      "^[a-z][a-zA-Z0-9]+$",
-      { "message": "Expected customer property name to be lowerCamelCase" }
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "tailwind",
+          "apply",
+          "variants",
+          "responsive",
+          "screen"
+        ]
+      }
     ]
   }
 }
