--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -2,27 +2,24 @@
   "name": "creators-next",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
-  "postcss":  {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
   "scripts": {
-    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/create-local-server.js",
     "build": "next build",
-    "start": "next start -p 3000",
+    "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/create-local-server.js",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && npm run format",
     "lint:strict": "eslint --max-warnings=0 src",
-    "typecheck": "tsc --noEmit --incremental false",
-    "test:watch": "jest --watch",
-    "test": "jest",
+    "postinstall": "node scripts/copyLeoIcons.js",
+    "prepare": "husky install",
+    "start": "next start -p 3001",
     "stylelint": "stylelint \"**/*.css\"",
-    "format": "prettier -w .",
-    "format:check": "prettier -c ."
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
+    "@brave/leo": "github:brave/leo#ad11c8033e8ab248892b5b64cc5d33df9df6da33",
     "clsx": "^2.0.0",
     "express": "^4.18.2",
     "next": "^13.4.12",
@@ -43,7 +40,6 @@
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "autoprefixer": "^10.4.14",
-    "husky": "^8.0.3",
     "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^13.4.12",
@@ -51,18 +47,21 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
     "miragejs": "^0.1.47",
     "next-router-mock": "^0.9.7",
     "postcss": "^8.4.27",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "stylelint": "^15.10.2",
     "stylelint-config-clean-order": "^5.0.1",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-webpack-plugin": "^4.1.1",
-    "typescript": "^5.1.6"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
