fix: update package type to module

--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -2,6 +2,7 @@
   "name": "creators-next",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "next build",
     "dev": "NODE_TLS_REJECT_UNAUTHORIZED=0 node scripts/create-local-server.js",
