--- a/nextjs/Dockerfile
+++ b/nextjs/Dockerfile
@@ -4,15 +4,8 @@ FROM node:18-alpine AS deps
 RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
-# Install dependencies based on the preferred package manager
-COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
-RUN \
-  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
-  elif [ -f package-lock.json ]; then npm ci; \
-  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i; \
-  else echo "Lockfile not found." && exit 1; \
-  fi
-
+COPY package.json package-lock.json* ./
+RUN npm i
 
 # Rebuild the source code only when needed
 FROM node:18-alpine AS builder
@@ -53,9 +46,9 @@ RUN npm run build
 
 #USER nextjs
 
-EXPOSE 3000
+EXPOSE 5001
 
-ENV PORT 3000
+ENV PORT 5001
 
 #CMD ["node"]
 CMD ["node", "server.js"]
