Chore/publishers migration (#4198)
* fix: get docker working with next-js

* chore: add nextjs files

* refactor: add proxy

--- a/nextjs/.gitignore
+++ b/nextjs/.gitignore
@@ -23,10 +23,9 @@
 npm-debug.log*
 .pnpm-debug.log*
 
-# local env files
-.env
-.env*.local
-
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# leo static assets
+/public/icons
